web-infras/parser/tests/fixtures/esprima/ES6/arrow-function/invalid-duplicated-names-rest-parameter/output.txt
[SyntaxError]: duplicate params (2,8)
2|(a,...[a]) => 0;
 |      ^
